# wop-web

./: .env  .env.development  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  astro.config.mjs  backend.sh  build.sh  django_serve.sh  django_test.sh  docker-compose.yml  docker-composeV1.yml  format_js_code.sh  format_python_code.sh  frontend.sh  heroku.sh  package-lock.json  package.json  poetry_activate.sh  properties.json  pyproject.toml  render.yaml  requirements.txt  vue.config.js
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: python_code_formatter.yml
backend/: api.py  api_phillydb.py  asgi.py  settings.py  tests.py  urls.py
backend/queries/: __init__.py  manual_queries.py  neighborhood_queries.py  owner_queries.py  property_queries.py  queries.py
backend/scripts/: average_violations_per_property_per_year.sql
backend/tests/: conftest.py  test_api.py  test_neighborhood_queries.py  test_owner_queries.py  test_property_queries.py  test_queries.py  test_urls.py
frontend/: .env.development  package.json  prettier.sh  vue.config.js
solid/: .env  index.html  package-lock.json  package.json
solid/src/: App.tsx  index.css  index.tsx
src/: App.js  App.tsx  App.vue  index.tsx  main.js
src/Store/: RootReducer.ts  RootSaga.ts  Store.ts
src/Utilities/: queryHelpers.ts  types.ts
src/api/: pages.js  singleTable.js
src/components/: AddressSearch.vue  BioResult.vue  ExampleOwners.vue  (+8 more)
web/: astro.config.mjs  package-lock.json  package.json
whophi/: .gitignore  package-lock.json  package.json
(+169 files in other folders)
