[tool.poetry]
name = "phillydb-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report term-missing -vv --no-cov-on-fail --cov-fail-under=80"
norecursedirs = [".*", "build", "dist", "*.egg", "venv", "node_modules"]
DJANGO_SETTINGS_MODULE = "backend.settings"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["backend/asgi.py", "backend/wsgi.py", "manage.py"]
